feat: expand MES phase follow-up coverage