@@ -18,17 +18,24 @@ import com.mes.basic.mapper.MaterialMapper;
 import com.mes.basic.mapper.WorkCenterMapper;
 import com.mes.dispatch.domain.entity.DispatchAssignment;
 import com.mes.dispatch.domain.entity.DispatchTask;
+import com.mes.dispatch.enums.DispatchStatus;
 import com.mes.dispatch.mapper.DispatchAssignmentMapper;
 import com.mes.dispatch.mapper.DispatchTaskMapper;
+import com.mes.dispatch.service.IDispatchTaskService;
 import com.mes.material.domain.entity.MaterialRequisition;
 import com.mes.material.mapper.MaterialRequisitionMapper;
+import com.mes.material.service.IMaterialRequisitionService;
 import com.mes.plan.mapper.OrderPlanMapper;
 import com.mes.process.domain.entity.ManufacturingBom;
 import com.mes.process.domain.entity.ManufacturingBomItem;
 import com.mes.process.domain.entity.ProcessInfo;
+import com.mes.process.domain.entity.Route;
+import com.mes.process.domain.entity.RouteStep;
 import com.mes.process.mapper.ManufacturingBomItemMapper;
 import com.mes.process.mapper.ManufacturingBomMapper;
 import com.mes.process.mapper.ProcessInfoMapper;
+import com.mes.process.mapper.RouteMapper;
+import com.mes.process.mapper.RouteStepMapper;
 import com.mes.quality.domain.entity.ShiftHandover;
 import com.mes.quality.mapper.ShiftHandoverMapper;
 import com.mes.team.domain.entity.ProductionTeam;
@@ -40,6 +47,10 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationHandler;
+import java.lang.reflect.Method;
+import java.lang.reflect.Proxy;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -59,6 +70,16 @@ import static org.mockito.Mockito.*;
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 class ApsIntegrationFullTest {
 
+    private static final String FEEDBACK_DISPATCH = "DISPATCH";
+    private static final String FEEDBACK_START_CHECK = "START_CHECK";
+    private static final String FEEDBACK_CONSTRAINT = "CONSTRAINT";
+    private static final String FEEDBACK_SHIFT_OUTPUT = "SHIFT_OUTPUT";
+    private static final String FEEDBACK_MATERIAL_SHORTAGE = "MATERIAL_SHORTAGE";
+    private static final String FEEDBACK_REQUISITION = "REQUISITION";
+    private static final String FEEDBACK_SUPPLY_PROGRESS = "SUPPLY_PROGRESS";
+    private static final String FEEDBACK_STATUS_CHANGE = "STATUS_CHANGE";
+    private static final String FEEDBACK_PROCESS_CHANGE = "PROCESS_CHANGE";
+
     private ObjectMapper objectMapper;
 
     // ===== 主数据同步依赖 =====
@@ -67,6 +88,8 @@ class ApsIntegrationFullTest {
     @Mock private IApsSyncLogService syncLogService;
     @Mock private WorkCenterMapper workCenterMapper;
     @Mock private ProcessInfoMapper processInfoMapper;
+    @Mock private RouteMapper routeMapper;
+    @Mock private RouteStepMapper routeStepMapper;
     @Mock private ManufacturingBomMapper bomMapper;
     @Mock private ManufacturingBomItemMapper bomItemMapper;
     @Mock private MaterialMapper materialMapper;
@@ -76,16 +99,22 @@ class ApsIntegrationFullTest {
     @Mock private IApsUpstreamSyncService upstreamSyncService;
     @Mock private DispatchTaskMapper dispatchTaskMapper;
     @Mock private DispatchAssignmentMapper dispatchAssignmentMapper;
+    @Mock private IDispatchTaskService dispatchTaskService;
     @Mock private ShiftHandoverMapper shiftHandoverMapper;
     @Mock private WorkOrderMapper workOrderMapper;
     @Mock private WorkOrderInputMaterialMapper inputMaterialMapper;
     @Mock private WorkOrderConstraintMapper constraintMapper;
     @Mock private WorkOrderSupplyPlanMapper supplyPlanMapper;
     @Mock private MaterialRequisitionMapper requisitionMapper;
+    @Mock private IMaterialRequisitionService materialRequisitionService;
     @Mock private ApsSyncQueueMapper syncQueueMapper;
     @Mock private OrderPlanMapper orderPlanMapper;
     // P2 升级后 ApsExtendedCallbackServiceImpl 新增了幂等服务依赖
     @Mock private com.mes.aps.service.ApsCallbackIdempotencyService idempotencyService;
+    private RecordingInvocationHandler ganttCacheMapperHandler;
+    private RecordingInvocationHandler capacityLoadMapperHandler;
+    private Object ganttCacheMapper;
+    private Object capacityLoadMapper;
 
     // ===== 被测服务 =====
     private ApsMasterDataSyncServiceImpl masterDataSyncService;
@@ -99,19 +128,26 @@ class ApsIntegrationFullTest {
 
         masterDataSyncService = new ApsMasterDataSyncServiceImpl(
                 apsClient, configService, syncLogService, objectMapper,
-                workCenterMapper, processInfoMapper, bomMapper, bomItemMapper,
+                workCenterMapper, processInfoMapper, routeMapper, routeStepMapper, bomMapper, bomItemMapper,
                 materialMapper, teamMapper);
 
         feedbackService = new ApsExecutionFeedbackServiceImpl(
-                upstreamSyncService, objectMapper,
+                upstreamSyncService, syncLogService, objectMapper,
                 dispatchTaskMapper, dispatchAssignmentMapper, shiftHandoverMapper,
                 workOrderMapper, inputMaterialMapper, constraintMapper,
                 supplyPlanMapper, requisitionMapper);
 
-        callbackService = new ApsExtendedCallbackServiceImpl(
-                syncLogService, objectMapper,
-                workOrderMapper, dispatchTaskMapper, dispatchAssignmentMapper,
-                idempotencyService);
+        ganttCacheMapper = createOptionalRecorderProxy(
+                "com.mes.aps.mapper.ApsGanttCacheMapper",
+                handler -> ganttCacheMapperHandler = handler);
+        capacityLoadMapper = createOptionalRecorderProxy(
+                "com.mes.aps.mapper.ApsCapacityLoadMapper",
+                handler -> capacityLoadMapperHandler = handler);
+
+        callbackService = instantiateCallbackService();
+
+        when(syncLogService.createLog(anyString(), anyString(), anyString()))
+                .thenReturn(buildMockSyncLog());
 
         // 默认放通幂等校验：测试聚焦业务分支，由各用例按需再 override
         when(idempotencyService.tryAcquire(anyString(), anyString())).thenReturn(true);
@@ -128,6 +164,7 @@ class ApsIntegrationFullTest {
         wc1.setWorkCenterCode("WC-001");
         wc1.setWorkCenterName("CNC加工中心1号");
         wc1.setWorkCenterCategory("MACHINING");
+        wc1.setResourceSubtype("FIVE_AXIS");
         wc1.setEfficiency(new BigDecimal("0.95"));
         wc1.setResourceCapacity(new BigDecimal("480"));
         wc1.setBatchQty(new BigDecimal("100"));
@@ -156,6 +193,12 @@ class ApsIntegrationFullTest {
         assertEquals(0, result.getFailCount());
 
         verify(apsClient).post(eq("/api/mes/master-data/work-centers"), any(), eq(Map.class));
+        ArgumentCaptor<Map<String, Object>> payloadCaptor = ArgumentCaptor.forClass(Map.class);
+        verify(apsClient).post(eq("/api/mes/master-data/work-centers"), payloadCaptor.capture(), eq(Map.class));
+        List<?> data = (List<?>) payloadCaptor.getValue().get("data");
+        Map<?, ?> first = (Map<?, ?>) data.get(0);
+        assertEquals("FIVE_AXIS", first.get("resourceSubtype"));
+        assertFalse(first.containsKey("furnaceResourceType"));
         verify(syncLogService).completeLog(any(), eq(2), eq(2), eq(0), isNull());
 
         System.out.println("✓ 1.1 工作中心同步成功: 2条数据");
@@ -165,16 +208,55 @@ class ApsIntegrationFullTest {
     @Order(2)
     @DisplayName("1.2 工艺路线同步 - 正常流程")
     void testSyncProcessRoutes_Success() {
-        ProcessInfo p1 = new ProcessInfo();
-        p1.setProcessNo("OP-010");
-        p1.setProcessName("粗车加工");
-        p1.setProcessCode("PC-001");
-        p1.setHandleTime(new BigDecimal("120"));
-        p1.setDisassembleTime(new BigDecimal("15"));
-        p1.setInstallTime(new BigDecimal("20"));
-        p1.setWorkCenterId(1L);
+        Route route = new Route();
+        route.setId(101L);
+        route.setRouteCode("ROUTE-001");
+        route.setRouteName("CFM56叶片标准路线");
+        route.setProductCode("PROD-001");
+        route.setProductCategory("BLADE");
+        route.setMachineModel("CFM56");
+        route.setProductType("NEW");
+        route.setStatus("ACTIVE");
 
-        when(processInfoMapper.selectList(any())).thenReturn(List.of(p1));
+        RouteStep step20 = new RouteStep();
+        step20.setId(1002L);
+        step20.setRouteId(101L);
+        step20.setSequenceNo(20);
+        step20.setProcessId(202L);
+        step20.setProcessNo("OP-020");
+        step20.setProcessName("精车加工");
+        step20.setWorkCenterId(2L);
+        step20.setHandleTime(new BigDecimal("60"));
+        step20.setPredecessorStepId(1001L);
+        step20.setParallelFlag(0);
+        step20.setOptionalFlag(0);
+
+        RouteStep step10 = new RouteStep();
+        step10.setId(1001L);
+        step10.setRouteId(101L);
+        step10.setSequenceNo(10);
+        step10.setProcessId(201L);
+        step10.setProcessNo("OP-010");
+        step10.setProcessName("粗车加工");
+        step10.setWorkCenterId(1L);
+        step10.setHandleTime(new BigDecimal("120"));
+        step10.setParallelFlag(0);
+        step10.setOptionalFlag(0);
+
+        WorkCenter wc1 = new WorkCenter();
+        wc1.setId(1L);
+        wc1.setWorkCenterCode("WC-001");
+        wc1.setWorkCenterName("CNC加工中心1号");
+
+        WorkCenter wc2 = new WorkCenter();
+        wc2.setId(2L);
+        wc2.setWorkCenterCode("WC-002");
+        wc2.setWorkCenterName("CNC加工中心2号");
+
+        when(routeMapper.selectList(any())).thenReturn(List.of(route));
+        when(routeStepMapper.selectList(any())).thenReturn(List.of(step20, step10));
+        when(workCenterMapper.selectById(1L)).thenReturn(wc1);
+        when(workCenterMapper.selectById(2L)).thenReturn(wc2);
         when(syncLogService.createLog(anyString(), anyString(), anyString()))
                 .thenReturn(buildMockSyncLog());
         when(apsClient.post(anyString(), any(), eq(Map.class))).thenReturn(Map.of("status", "ok"));
@@ -183,10 +265,27 @@ class ApsIntegrationFullTest {
 
         assertNotNull(result);
         assertEquals(SyncStatus.SUCCESS.getCode(), result.getStatus());
-        assertEquals(1, result.getTotalCount());
-        verify(apsClient).post(eq("/api/mes/master-data/process-routes"), any(), eq(Map.class));
+        assertEquals(2, result.getTotalCount());
+        ArgumentCaptor<Map<String, Object>> payloadCaptor = ArgumentCaptor.forClass(Map.class);
+        verify(apsClient).post(eq("/api/mes/master-data/process-routes"), payloadCaptor.capture(), eq(Map.class));
+        List<?> data = (List<?>) payloadCaptor.getValue().get("data");
+        assertEquals(2, data.size());
+        Map<?, ?> first = (Map<?, ?>) data.get(0);
+        Map<?, ?> second = (Map<?, ?>) data.get(1);
+        assertEquals("ROUTE-001", first.get("routeCode"));
+        assertEquals("PROD-001", first.get("productCode"));
+        assertEquals(10, first.get("sequenceNo"));
+        assertEquals(10, first.get("processSequence"));
+        assertEquals("WC-001", first.get("workCenterCode"));
+        assertEquals("WC-001", first.get("resourceCode"));
+        assertEquals(120D, first.get("cycleTime"));
+        assertEquals(List.of(), first.get("dependencySequenceNos"));
+        assertEquals(20, second.get("sequenceNo"));
+        assertEquals(10, second.get("predecessorSequenceNo"));
+        assertEquals(List.of(10), second.get("dependencySequenceNos"));
+        assertEquals("WC-002", second.get("workCenterCode"));
 
-        System.out.println("✓ 1.2 工艺路线同步成功: 1条数据");
+        System.out.println("✓ 1.2 工艺路线同步成功: 1条路线展开为2个有序步骤");
     }
 
     @Test
@@ -345,15 +444,9 @@ class ApsIntegrationFullTest {
 
         feedbackService.feedbackDispatchAssignment(100L, 200L);
 
-        verify(upstreamSyncService).enqueue(
-                eq(SyncType.DISPATCH.getCode()),
-                eq("DISPATCH_ASSIGNMENT"),
-                eq(200L),
-                eq("ORD-2024-001"),
-                eq(3),
-                argThat(json -> json.contains("CNC-001") && json.contains("DEVICE")));
+        verifyUnsupportedFeedbackAudited(FEEDBACK_DISPATCH);
 
-        System.out.println("✓ 2.1 派工分配反馈成功");
+        System.out.println("✓ 2.1 派工分配反馈改为本地审计失败记录");
     }
 
     @Test
@@ -362,15 +455,9 @@ class ApsIntegrationFullTest {
     void testFeedbackStartCheck_Failed() {
         feedbackService.feedbackStartCheck(2001L, "FAILED");
 
-        verify(upstreamSyncService).enqueue(
-                eq(SyncType.START_CHECK.getCode()),
-                eq("WORK_START_CHECK"),
-                eq(2001L),
-                isNull(),
-                eq(2),  // FAILED 优先级为2
-                argThat(json -> json.contains("FAILED")));
+        verifyUnsupportedFeedbackAudited(FEEDBACK_START_CHECK);
 
-        System.out.println("✓ 2.2 开工检查失败反馈成功（优先级=2）");
+        System.out.println("✓ 2.2 开工检查失败反馈改为本地审计失败记录");
     }
 
     @Test
@@ -379,15 +466,9 @@ class ApsIntegrationFullTest {
     void testFeedbackStartCheck_Passed() {
         feedbackService.feedbackStartCheck(2001L, "PASSED");
 
-        verify(upstreamSyncService).enqueue(
-                eq(SyncType.START_CHECK.getCode()),
-                eq("WORK_START_CHECK"),
-                eq(2001L),
-                isNull(),
-                eq(5),  // PASSED 优先级为5
-                argThat(json -> json.contains("PASSED")));
+        verifyUnsupportedFeedbackAudited(FEEDBACK_START_CHECK);
 
-        System.out.println("✓ 2.3 开工检查通过反馈成功（优先级=5）");
+        System.out.println("✓ 2.3 开工检查通过反馈改为本地审计失败记录");
     }
 
     @Test
@@ -407,15 +488,9 @@ class ApsIntegrationFullTest {
 
         feedbackService.feedbackWorkOrderConstraint(1001L);
 
-        verify(upstreamSyncService).enqueue(
-                eq(SyncType.CONSTRAINT.getCode()),
-                eq("WORK_ORDER_CONSTRAINT"),
-                eq(1001L),
-                eq("WO-2024-001"),
-                eq(4),
-                argThat(json -> json.contains("FINISH_TO_START")));
+        verifyUnsupportedFeedbackAudited(FEEDBACK_CONSTRAINT);
 
-        System.out.println("✓ 2.4 工单约束反馈成功");
+        System.out.println("✓ 2.4 工单约束反馈改为本地审计失败记录");
     }
 
     @Test
@@ -436,15 +511,9 @@ class ApsIntegrationFullTest {
 
         feedbackService.feedbackShiftOutput(301L);
 
-        verify(upstreamSyncService).enqueue(
-                eq(SyncType.SHIFT_OUTPUT.getCode()),
-                eq("SHIFT_HANDOVER"),
-                eq(301L),
-                eq("SN-001"),
-                eq(3),
-                argThat(json -> json.contains("50") && json.contains("45")));
+        verifyUnsupportedFeedbackAudited(FEEDBACK_SHIFT_OUTPUT);
 
-        System.out.println("✓ 2.5 交班产出反馈成功（计划50，实际45）");
+        System.out.println("✓ 2.5 交班产出反馈改为本地审计失败记录");
     }
 
     @Test
@@ -471,15 +540,9 @@ class ApsIntegrationFullTest {
 
         feedbackService.feedbackMaterialShortage(1001L);
 
-        verify(upstreamSyncService).enqueue(
-                eq(SyncType.MATERIAL_SHORTAGE.getCode()),
-                eq("MATERIAL_SHORTAGE"),
-                eq(1001L),
-                eq("WO-2024-001"),
-                eq(2),
-                argThat(json -> json.contains("MAT-001") && json.contains("40") && !json.contains("MAT-002")));
+        verifyUnsupportedFeedbackAudited(FEEDBACK_MATERIAL_SHORTAGE);
 
-        System.out.println("✓ 2.6 物料短缺反馈成功（MAT-001缺40，MAT-002齐套不报）");
+        System.out.println("✓ 2.6 物料短缺反馈改为本地审计失败记录");
     }
 
     @Test
@@ -500,6 +563,8 @@ class ApsIntegrationFullTest {
 
         verify(upstreamSyncService, never()).enqueue(anyString(), anyString(),
                 anyLong(), anyString(), anyInt(), anyString());
+        verify(syncLogService, never()).createLog(anyString(), eq(SyncDirection.UPSTREAM.getCode()),
+                eq(FEEDBACK_MATERIAL_SHORTAGE));
 
         System.out.println("✓ 2.7 全部齐套时不发送短缺反馈");
     }
@@ -521,15 +586,9 @@ class ApsIntegrationFullTest {
 
         feedbackService.feedbackRequisitionProgress(401L);
 
-        verify(upstreamSyncService).enqueue(
-                eq(SyncType.REQUISITION.getCode()),
-                eq("MATERIAL_REQUISITION"),
-                eq(401L),
-                eq("REQ-2024-001"),
-                eq(4),
-                argThat(json -> json.contains("PARTIAL_ISSUED")));
+        verifyUnsupportedFeedbackAudited(FEEDBACK_REQUISITION);
 
-        System.out.println("✓ 2.8 领料进度反馈成功");
+        System.out.println("✓ 2.8 领料进度反馈改为本地审计失败记录");
     }
 
     @Test
@@ -550,15 +609,9 @@ class ApsIntegrationFullTest {
 
         feedbackService.feedbackSupplyProgress(1001L, 501L);
 
-        verify(upstreamSyncService).enqueue(
-                eq(SyncType.SUPPLY_PROGRESS.getCode()),
-                eq("SUPPLY_PLAN"),
-                eq(501L),
-                eq("SUP-001"),
-                eq(4),
-                argThat(json -> json.contains("75")));
+        verifyUnsupportedFeedbackAudited(FEEDBACK_SUPPLY_PROGRESS);
 
-        System.out.println("✓ 2.9 供应计划完成度反馈成功（100计划，75完成）");
+        System.out.println("✓ 2.9 供应计划完成度反馈改为本地审计失败记录");
     }
 
     @Test
@@ -578,15 +631,9 @@ class ApsIntegrationFullTest {
 
         feedbackService.feedbackWorkOrderStatusChange(1001L, "IN_PROGRESS", "COMPLETED");
 
-        verify(upstreamSyncService).enqueue(
-                eq(SyncType.STATUS_CHANGE.getCode()),
-                eq("WORK_ORDER"),
-                eq(1001L),
-                eq("WO-2024-001"),
-                eq(2),
-                argThat(json -> json.contains("IN_PROGRESS") && json.contains("COMPLETED")));
+        verifyUnsupportedFeedbackAudited(FEEDBACK_STATUS_CHANGE);
 
-        System.out.println("✓ 2.10 工单状态变更反馈成功（IN_PROGRESS→COMPLETED）");
+        System.out.println("✓ 2.10 工单状态变更反馈改为本地审计失败记录");
     }
 
     @Test
@@ -595,15 +642,9 @@ class ApsIntegrationFullTest {
     void testFeedbackProcessChange() {
         feedbackService.feedbackProcessChange("BOM_UPGRADE", 101L, "BOM-2024-001");
 
-        verify(upstreamSyncService).enqueue(
-                eq(SyncType.PROCESS_CHANGE.getCode()),
-                eq("BOM_UPGRADE"),
-                eq(101L),
-                eq("BOM-2024-001"),
-                eq(3),
-                argThat(json -> json.contains("BOM_UPGRADE")));
+        verifyUnsupportedFeedbackAudited(FEEDBACK_PROCESS_CHANGE);
 
-        System.out.println("✓ 2.11 工艺变更通知反馈成功");
+        System.out.println("✓ 2.11 工艺变更通知反馈改为本地审计失败记录");
     }
 
     // ==================== 3. APS下发回调测试 ====================
@@ -624,13 +665,37 @@ class ApsIntegrationFullTest {
         item.setPriority(1);
         mrp.setItems(List.of(item));
 
+        WorkOrder workOrder = new WorkOrder();
+        workOrder.setId(1001L);
+        workOrder.setWorkOrderNo("WO-2024-001");
+        workOrder.setProductCode("PROD-001");
+        workOrder.setProductName("CFM56叶片");
+        workOrder.setPlanQty(new BigDecimal("100"));
+        workOrder.setQtyUnit("PCS");
+
+        Material material = new Material();
+        material.setId(501L);
+        material.setMaterialCode("MAT-001");
+        material.setMaterialName("钛合金棒料");
+        material.setBaseUnit("PCS");
+
         when(syncLogService.createLog(anyString(), anyString(), anyString()))
                 .thenReturn(buildMockSyncLog());
+        when(workOrderMapper.selectOne(any())).thenReturn(workOrder);
+        when(materialMapper.selectOne(any())).thenReturn(material);
+        when(materialRequisitionService.createFromMrp(any())).thenReturn(3001L);
 
         callbackService.handleMrpResult(mrp);
 
         verify(syncLogService).createLog(eq("mrp-001"),
                 eq(SyncDirection.DOWNSTREAM.getCode()), eq(SyncType.MRP.getCode()));
+        verify(materialRequisitionService).createFromMrp(argThat(dto ->
+                dto.getWorkOrderId() != null
+                        && "WO-2024-001".equals(dto.getWorkOrderNo())
+                        && dto.getItems() != null
+                        && dto.getItems().size() == 1
+                        && "MAT-001".equals(dto.getItems().get(0).getMaterialCode())
+                        && item.getRequiredQty().compareTo(dto.getItems().get(0).getDemandQty()) == 0));
         verify(syncLogService).completeLog(any(), eq(1), eq(1), eq(0), isNull());
 
         System.out.println("✓ 3.1 MRP结果接收成功: 1条物料需求");
@@ -685,6 +750,8 @@ class ApsIntegrationFullTest {
     @Order(32)
     @DisplayName("3.3 甘特图数据接收")
     void testHandleGanttData() {
+        assertNotNull(ganttCacheMapper, "APS 甘特图缓存 mapper 应存在并用于回调落库");
+
         ApsGanttDataVO gantt = new ApsGanttDataVO();
         gantt.setRequestId("gantt-001");
         gantt.setScheduleBatchId("BATCH-001");
@@ -696,8 +763,12 @@ class ApsIntegrationFullTest {
         task.setWorkOrderNo("WO-2024-001");
         task.setProcessName("粗车加工");
         task.setResourceCode("WC-001");
+        task.setStartTime(LocalDateTime.of(2024, 6, 15, 8, 0));
+        task.setEndTime(LocalDateTime.of(2024, 6, 15, 12, 0));
         task.setDuration(240);
-        task.setPredecessors(Collections.emptyList());
+        task.setStatus("SCHEDULED");
+        task.setPriority(2);
+        task.setPredecessors(List.of("TASK-000"));
         gantt.setTasks(List.of(task));
 
         when(syncLogService.createLog(anyString(), anyString(), anyString()))
@@ -705,6 +776,17 @@ class ApsIntegrationFullTest {
 
         callbackService.handleGanttData(gantt);
 
+        assertEquals(1, ganttCacheMapperHandler.count("delete"));
+        assertEquals(1, ganttCacheMapperHandler.count("insert"));
+        Object insertedTask = ganttCacheMapperHandler.firstArgument("insert");
+        assertEquals("BATCH-001", readField(insertedTask, "scheduleBatchId"));
+        assertEquals("TASK-001", readField(insertedTask, "taskId"));
+        assertEquals("WO-2024-001", readField(insertedTask, "workOrderNo"));
+        assertEquals("WC-001", readField(insertedTask, "resourceCode"));
+        assertEquals(LocalDateTime.of(2024, 6, 15, 0, 0), readField(insertedTask, "rangeStart"));
+        assertEquals(LocalDateTime.of(2024, 6, 22, 0, 0), readField(insertedTask, "rangeEnd"));
+        assertTrue(String.valueOf(readField(insertedTask, "predecessors")).contains("TASK-000"));
+        assertNotNull(readField(insertedTask, "createdTime"));
         verify(syncLogService).completeLog(any(), eq(1), eq(1), eq(0), isNull());
 
         System.out.println("✓ 3.3 甘特图数据接收成功: 1条任务，时间范围6/15-6/22");
@@ -714,6 +796,8 @@ class ApsIntegrationFullTest {
     @Order(33)
     @DisplayName("3.4 产能负荷数据接收")
     void testHandleCapacityLoad() {
+        assertNotNull(capacityLoadMapper, "APS 产能负荷 mapper 应存在并用于回调落库");
+
         ApsCapacityLoadVO capacity = new ApsCapacityLoadVO();
         capacity.setRequestId("cap-001");
         capacity.setScheduleBatchId("BATCH-001");
@@ -739,6 +823,18 @@ class ApsIntegrationFullTest {
 
         callbackService.handleCapacityLoad(capacity);
 
+        assertEquals(1, capacityLoadMapperHandler.count("delete"));
+        assertEquals(2, capacityLoadMapperHandler.count("insert"));
+        Object firstItem = capacityLoadMapperHandler.argument("insert", 0);
+        Object secondItem = capacityLoadMapperHandler.argument("insert", 1);
+        assertEquals("BATCH-001", readField(firstItem, "scheduleBatchId"));
+        assertEquals("WC-001", readField(firstItem, "workCenterCode"));
+        assertEquals(LocalDate.of(2024, 6, 15), readField(firstItem, "loadDate"));
+        assertEquals(new BigDecimal("87.50"), readField(firstItem, "loadRate"));
+        assertEquals(Boolean.FALSE, readField(firstItem, "overloaded"));
+        assertEquals("WC-002", readField(secondItem, "workCenterCode"));
+        assertEquals(Boolean.TRUE, readField(secondItem, "overloaded"));
+        assertNotNull(readField(firstItem, "createdTime"));
         verify(syncLogService).completeLog(any(), eq(2), eq(2), eq(0), isNull());
 
         System.out.println("✓ 3.4 产能负荷接收成功: WC-001(87.5%), WC-002(105%超负荷)");
@@ -787,10 +883,63 @@ class ApsIntegrationFullTest {
 
     @Test
     @Order(35)
+    @DisplayName("3.6 排程变更通知接收 - APS取消会撤销未完成派工并清空工单计划时间")
+    void testHandleScheduleChange_Cancelled() {
+        ApsScheduleChangeVO change = new ApsScheduleChangeVO();
+        change.setRequestId("chg-002");
+        change.setScheduleBatchId("BATCH-001");
+        change.setChangeReason("产能重排取消");
+
+        ApsScheduleChangeVO.AffectedOrder affected = new ApsScheduleChangeVO.AffectedOrder();
+        affected.setWorkOrderNo("WO-2024-001");
+        affected.setChangeType("CANCELLED");
+        affected.setRemark("本批次不再投产");
+        change.setAffectedOrders(List.of(affected));
+
+        WorkOrder wo = new WorkOrder();
+        wo.setWorkOrderNo("WO-2024-001");
+        wo.setPlanStartTime(LocalDateTime.of(2024, 6, 15, 8, 0));
+        wo.setPlanEndTime(LocalDateTime.of(2024, 6, 15, 12, 0));
+        wo.setRemark("原始备注");
+
+        DispatchTask activeTask = new DispatchTask();
+        activeTask.setId(501L);
+        activeTask.setDispatchStatus(DispatchStatus.ASSIGNED.getCode());
+
+        DispatchTask completedTask = new DispatchTask();
+        completedTask.setId(502L);
+        completedTask.setDispatchStatus(DispatchStatus.COMPLETED.getCode());
+
+        when(syncLogService.createLog(anyString(), anyString(), anyString()))
+                .thenReturn(buildMockSyncLog());
+        when(workOrderMapper.selectOne(any())).thenReturn(wo);
+        when(dispatchTaskMapper.selectList(any())).thenReturn(List.of(activeTask, completedTask));
+        when(workOrderMapper.updateById(any())).thenReturn(1);
+
+        callbackService.handleScheduleChange(change);
+
+        verify(dispatchTaskService).cancel(eq(501L), argThat(reason ->
+                reason.contains("APS取消排程")
+                        && reason.contains("产能重排取消")
+                        && reason.contains("本批次不再投产")));
+        verify(dispatchTaskService, never()).cancel(eq(502L), anyString());
+        verify(workOrderMapper).updateById(argThat(updated -> {
+            WorkOrder order = (WorkOrder) updated;
+            return order.getPlanStartTime() == null
+                    && order.getPlanEndTime() == null
+                    && order.getRemark() != null
+                    && order.getRemark().contains("APS取消排程");
+        }));
+
+        System.out.println("✓ 3.6 APS取消排程接收成功: 未完成派工已撤销，工单计划时间已清空");
+    }
+
+    @Test
+    @Order(36)
     @DisplayName("3.6 排程变更 - 空受影响列表")
     void testHandleScheduleChange_Empty() {
         ApsScheduleChangeVO change = new ApsScheduleChangeVO();
-        change.setRequestId("chg-002");
+        change.setRequestId("chg-003");
         change.setAffectedOrders(null);
 
         when(syncLogService.createLog(anyString(), anyString(), anyString()))
@@ -808,7 +957,7 @@ class ApsIntegrationFullTest {
 
     @Test
     @Order(40)
-    @DisplayName("4.1 SyncType 枚举完整性检查")
+    @DisplayName("4.1 SyncType 合同枚举收缩检查")
     void testSyncTypeEnum() {
         // 验证原有类型
         assertNotNull(SyncType.valueOf("ORDER"));
@@ -826,16 +975,16 @@ class ApsIntegrationFullTest {
         assertNotNull(SyncType.valueOf("MATERIAL_MASTER"));
         assertNotNull(SyncType.valueOf("TEAM"));
 
-        // 验证新增执行反馈类型
-        assertNotNull(SyncType.valueOf("DISPATCH"));
-        assertNotNull(SyncType.valueOf("START_CHECK"));
-        assertNotNull(SyncType.valueOf("CONSTRAINT"));
-        assertNotNull(SyncType.valueOf("SHIFT_OUTPUT"));
-        assertNotNull(SyncType.valueOf("MATERIAL_SHORTAGE"));
-        assertNotNull(SyncType.valueOf("REQUISITION"));
-        assertNotNull(SyncType.valueOf("SUPPLY_PROGRESS"));
-        assertNotNull(SyncType.valueOf("STATUS_CHANGE"));
-        assertNotNull(SyncType.valueOf("PROCESS_CHANGE"));
+        // 执行反馈类型已下沉为 APS 内部反馈码，不再占用集成合同枚举
+        assertTrue(SyncType.fromCode(FEEDBACK_DISPATCH).isEmpty());
+        assertTrue(SyncType.fromCode(FEEDBACK_START_CHECK).isEmpty());
+        assertTrue(SyncType.fromCode(FEEDBACK_CONSTRAINT).isEmpty());
+        assertTrue(SyncType.fromCode(FEEDBACK_SHIFT_OUTPUT).isEmpty());
+        assertTrue(SyncType.fromCode(FEEDBACK_MATERIAL_SHORTAGE).isEmpty());
+        assertTrue(SyncType.fromCode(FEEDBACK_REQUISITION).isEmpty());
+        assertTrue(SyncType.fromCode(FEEDBACK_SUPPLY_PROGRESS).isEmpty());
+        assertTrue(SyncType.fromCode(FEEDBACK_STATUS_CHANGE).isEmpty());
+        assertTrue(SyncType.fromCode(FEEDBACK_PROCESS_CHANGE).isEmpty());
 
         // 验证新增APS下发类型
         assertNotNull(SyncType.valueOf("MRP"));
@@ -844,9 +993,9 @@ class ApsIntegrationFullTest {
         assertNotNull(SyncType.valueOf("CAPACITY_LOAD"));
         assertNotNull(SyncType.valueOf("SCHEDULE_CHANGE"));
 
-        assertEquals(29, SyncType.values().length);
+        assertEquals(20, SyncType.values().length);
 
-        System.out.println("✓ 4.1 SyncType枚举完整: 共29个类型（10原有+5主数据+9执行反馈+5APS下发）");
+        System.out.println("✓ 4.1 SyncType合同枚举已收缩: 共20个类型（10原有+5主数据+5APS下发）");
     }
 
     @Test
@@ -899,5 +1048,118 @@ class ApsIntegrationFullTest {
         log.setId(1L);
         log.setBatchId(UUID.randomUUID().toString());
         return log;
+    }
+
+    private void verifyUnsupportedFeedbackAudited(String syncType) {
+        verify(upstreamSyncService, never()).enqueue(anyString(), anyString(),
+                anyLong(), anyString(), anyInt(), anyString());
+        verify(syncLogService).createLog(anyString(),
+                eq(SyncDirection.UPSTREAM.getCode()), eq(syncType));
+        verify(syncLogService).completeLog(any(), eq(0), eq(0), eq(1),
+                contains("APS 当前合同不支持该执行反馈类型: " + syncType));
+    }
+
+    private ApsExtendedCallbackServiceImpl instantiateCallbackService() {
+        try {
+            Constructor<?> constructor = Arrays.stream(ApsExtendedCallbackServiceImpl.class.getDeclaredConstructors())
+                    .max(Comparator.comparingInt(Constructor::getParameterCount))
+                    .orElseThrow();
+            constructor.setAccessible(true);
+
+            Object[] args = Arrays.stream(constructor.getParameterTypes())
+                    .map(this::resolveCallbackDependency)
+                    .toArray();
+            return (ApsExtendedCallbackServiceImpl) constructor.newInstance(args);
+        } catch (ReflectiveOperationException e) {
+            throw new RuntimeException("初始化 APS 扩展回调服务失败", e);
+        }
+    }
+
+    private Object resolveCallbackDependency(Class<?> parameterType) {
+        return switch (parameterType.getName()) {
+            case "com.mes.aps.service.IApsSyncLogService" -> syncLogService;
+            case "com.fasterxml.jackson.databind.ObjectMapper" -> objectMapper;
+            case "com.mes.workorder.mapper.WorkOrderMapper" -> workOrderMapper;
+            case "com.mes.dispatch.mapper.DispatchTaskMapper" -> dispatchTaskMapper;
+            case "com.mes.dispatch.mapper.DispatchAssignmentMapper" -> dispatchAssignmentMapper;
+            case "com.mes.dispatch.service.IDispatchTaskService" -> dispatchTaskService;
+            case "com.mes.aps.service.ApsCallbackIdempotencyService" -> idempotencyService;
+            case "com.mes.aps.mapper.ApsGanttCacheMapper" -> ganttCacheMapper;
+            case "com.mes.aps.mapper.ApsCapacityLoadMapper" -> capacityLoadMapper;
+            case "com.mes.basic.mapper.MaterialMapper" -> materialMapper;
+            case "com.mes.material.service.IMaterialRequisitionService" -> materialRequisitionService;
+            default -> throw new IllegalStateException("未知的 APS 扩展回调依赖: " + parameterType.getName());
+        };
+    }
+
+    private Object createOptionalRecorderProxy(String className, java.util.function.Consumer<RecordingInvocationHandler> consumer) {
+        try {
+            Class<?> mapperType = Class.forName(className);
+            RecordingInvocationHandler handler = new RecordingInvocationHandler();
+            consumer.accept(handler);
+            return Proxy.newProxyInstance(
+                    mapperType.getClassLoader(),
+                    new Class<?>[]{mapperType},
+                    handler);
+        } catch (ClassNotFoundException e) {
+            return null;
+        }
+    }
+
+    private Object readField(Object target, String fieldName) {
+        assertNotNull(target, "目标对象不能为空");
+        Class<?> current = target.getClass();
+        while (current != null) {
+            try {
+                java.lang.reflect.Field field = current.getDeclaredField(fieldName);
+                field.setAccessible(true);
+                return field.get(target);
+            } catch (NoSuchFieldException e) {
+                current = current.getSuperclass();
+            } catch (IllegalAccessException e) {
+                throw new RuntimeException("读取字段失败: " + fieldName, e);
+            }
+        }
+        fail("未找到字段: " + fieldName);
+        return null;
+    }
+
+    private static class RecordingInvocationHandler implements InvocationHandler {
+
+        private final Map<String, List<Object[]>> invocations = new HashMap<>();
+
+        @Override
+        public Object invoke(Object proxy, Method method, Object[] args) {
+            invocations.computeIfAbsent(method.getName(), key -> new ArrayList<>())
+                    .add(args == null ? new Object[0] : args.clone());
+
+            Class<?> returnType = method.getReturnType();
+            if (returnType == Integer.TYPE || returnType == Integer.class) {
+                return 1;
+            }
+            if (returnType == Long.TYPE || returnType == Long.class) {
+                return 1L;
+            }
+            if (returnType == Boolean.TYPE || returnType == Boolean.class) {
+                return false;
+            }
+            return null;
+        }
+
+        int count(String methodName) {
+            return invocations.getOrDefault(methodName, List.of()).size();
+        }
+
+        Object firstArgument(String methodName) {
+            return argument(methodName, 0);
+        }
+
+        Object argument(String methodName, int index) {
+            List<Object[]> calls = invocations.getOrDefault(methodName, List.of());
+            assertTrue(calls.size() > index, "未捕获到第 " + (index + 1) + " 次 " + methodName + " 调用");
+            Object[] args = calls.get(index);
+            assertTrue(args.length > 0, methodName + " 调用缺少参数");
+            return args[0];
+        }
     }
 }
